add fontend register

--- a/src/app/index/music-new/music-new.component.html
+++ b/src/app/index/music-new/music-new.component.html
@@ -6,7 +6,7 @@
       <h3>Lorem Ipsum is simply </h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, in reprehenderit.</p>
       <div>
-        <audio src="assets/audio/dummy-audio.mp3" controls style="width: 253px"></audio>
+        <audio src="https://zingmp3.vn/bai-hat/Thich-Thi-Den-Le-Bao-Binh/ZWBWAIDA.html" controls style="width: 253px"></audio>
       </div>
       <div class="button"><span><a href="singlepage.html">Read More</a></span></div>
     </div>
