--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -3,7 +3,7 @@
   <div class="top-header">
     <div class="top-header-left">
       <ul>
-        <li class="active"><a href="#">Home</a></li>
+        <li class="active"><a routerLink="/">Home</a></li>
         <li><a href="#">Specials</a></li>
         <li><a href="#">Delivery</a></li>
         <li><a href="#">Contact</a></li>
@@ -17,7 +17,7 @@
   <div class="clear"> </div>
   <div class="sub-header" >
     <div class="logo">
-      <a href="index.html"><img src="assets/images/logo.png" title="logo" alt="image"></a>
+      <a routerLink="/"><img src="assets/images/logo.png" title="logo" alt="image"></a>
     </div>
     <div class="sub-header-center">
       <form>
@@ -26,8 +26,8 @@
     </div>
     <div class="sub-header-right">
       <ul>
-        <li><a href="#">log in</a></li>
-        <li><a href="#">Your account</a></li>
+        <li><a routerLink="signin">Đăng Nhập</a></li>
+        <li><a routerLink="register">Đăng Ký</a></li>
       </ul>
     </div>
     <div class="clear"> </div>
@@ -35,7 +35,7 @@
   <div class="clear"> </div>
   <div class="top-nav">
     <ul>
-      <li class="active1"><a href="index.html">Home</a></li>
+      <li class="active1"><a routerLink="/">Home</a></li>
       <li><a href="favorites.html">Favourites</a></li>
       <li><a href="artists.html">Artists</a></li>
       <li><a href="specials.html">Specials</a></li>
