--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,49 +1,75 @@
-<div class="header">
-  <!---start-top-header--->
-  <div class="top-header">
-    <div class="top-header-left">
-      <ul>
-        <li class="active"><a routerLink="/">Home</a></li>
-        <li><a href="#">Specials</a></li>
-        <li><a href="#">Delivery</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-    </div>
-    <div class="top-header-right">
+<nav class="navbar navbar-expand-lg
+ navbar-dark bg-primary">
 
-    </div>
-    <div class="clear"> </div>
-  </div>
-  <div class="clear"> </div>
-  <div class="sub-header" >
-    <div class="logo">
-      <a routerLink="/"><img src="assets/images/logo.png" title="logo" alt="image"></a>
-    </div>
-    <div class="sub-header-center">
-      <form>
-        <input type="text"><input type="submit" value="search">
-      </form>
-    </div>
-    <div class="sub-header-right">
-      <ul>
-        <li><a routerLink="signin">Đăng Nhập</a></li>
-        <li><a routerLink="register">Đăng Ký</a></li>
-      </ul>
-    </div>
-    <div class="clear"> </div>
-  </div>
-  <div class="clear"> </div>
-  <div class="top-nav">
-    <ul>
-      <li class="active1"><a routerLink="/">Home</a></li>
-      <li><a href="favorites.html">Favourites</a></li>
-      <li><a href="artists.html">Artists</a></li>
-      <li><a href="specials.html">Specials</a></li>
-      <li><a href="specials.html">Recent-albums</a></li>
-      <li><a href="contact.html">Feedback</a></li>
-      <div class="clear"> </div>
+  <a class="navbar-brand" [routerLink]="['/home']">Navbar</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse"
+          data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item"
+          routerLinkActive="active"
+          [routerLinkActiveOptions]="{extract: true}"
+      >
+        <a class="nav-link" [routerLink]="['/home']">home <span class="sr-only">(current)</span></a>
+      </li>
+
+      <li class="nav-item"
+          routerLinkActive="active"
+      >
+        <a class="nav-link" [routerLink]="['/mp3']">mp3<span class="sr-only">(current)</span></a>
+      </li>
+
+      <li class="nav-item"
+          routerLinkActive="active"
+      >
+        <a class="nav-link" [routerLink]="['/listAuthor']">listAuthor <span class="sr-only">(current)</span></a>
+      </li>
+
+      <li class="nav-item"
+          routerLinkActive="active"
+      >
+        <a class="nav-link" [routerLink]="['/createAuthor']">createAuthor</a>
+      </li>
+      <li class="nav-item"
+          routerLinkActive="active"
+      >
+        <a class="nav-link" [routerLink]="['/upload']">upload</a>
+      </li>
+
+      <!--      <li class="nav-item"-->
+      <!--          routerLinkActive="active"-->
+      <!--      >-->
+      <!--        <a class="nav-link" [routerLink]="['/products']">products</a>-->
+      <!--      </li>-->
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+           aria-haspopup="true" aria-expanded="false">
+          Dropdown
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">Action</a>
+          <a class="dropdown-item" href="#">Another action</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">Something else here</a>
+        </div>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+      </li>
     </ul>
+    <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form>
   </div>
-  <!---end-top-header--->
-  <!---End-header--->
-</div>
+
+
+</nav>
+<hr>
+
+
