--- a/src/app/index/music-new/music-new.component.html
+++ b/src/app/index/music-new/music-new.component.html
@@ -1,12 +1,12 @@
 <div class="products products-secondbox">
   <h5><span>Nhạc Mới Nhất</span> </h5>
   <div class="section group">
-    <div class="grid_1_of_4 images_1_of_4">
+    <div class="grid_1_of_5 images_1_of_5">
       <img src="assets/images/a9.jpg">
       <h3>Lorem Ipsum is simply </h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, in reprehenderit.</p>
       <div>
-        <audio src="https://zingmp3.vn/bai-hat/Thich-Thi-Den-Le-Bao-Binh/ZWBWAIDA.html" controls style="width: 253px"></audio>
+        <audio src="assets/audio/dummy-audio.mp3" controls style="width: 100%"></audio>
       </div>
       <div class="button"><span><a href="singlepage.html">Read More</a></span></div>
     </div>
