--- a/src/app/index/show-music-hot/show-music-hot.component.html
+++ b/src/app/index/show-music-hot/show-music-hot.component.html
@@ -1,12 +1,12 @@
 <div class="products">
   <h5><span>Top Nhạc Hot, Nghe Nghe Nhiều Nhất </span></h5>
   <div class="section group">
-    <div class="grid_1_of_4 images_1_of_4">
+    <div class="grid_1_of_5 images_1_of_5">
       <img src="assets/images/a4.jpg" alt="image">
       <h3>Lorem Ipsum is simply </h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, in reprehenderit.</p>
       <div>
-        <audio src="assets/audio/dummy-audio.mp3" controls style="width: 253px"></audio>
+        <audio src="assets/audio/dummy-audio.mp3" controls style="width: 100%"></audio>
       </div>
       <div class="button"><span><a href="singlepage.html">Chi Tiết</a></span></div>
     </div>
