--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -2,7 +2,7 @@
 <app-slide></app-slide>
 <div class="content">
   <div class="products-box">
-    <app-show-music-hot></app-show-music-hot>
+    <app-show-music-hot [songs]="hitSongs"></app-show-music-hot>
     <div class="clear"></div>
     <app-album-hot></app-album-hot>
     <app-music-new></app-music-new>
