--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -41,6 +41,8 @@
       <li><a href="specials.html">Specials</a></li>
       <li><a href="specials.html">Recent-albums</a></li>
       <li><a href="contact.html">Feedback</a></li>
+      <li><a routerLink="song-list">song-list</a></li>
+      <li><a routerLink="song-create">song-create</a></li>
       <div class="clear"> </div>
     </ul>
   </div>
